--- a/public/assignment/views/widget/templates/widget-list.view.client.html
+++ b/public/assignment/views/widget/templates/widget-list.view.client.html
@@ -22,23 +22,13 @@
             <a href="widget-heading-edit.view.client.html"><span class="glyphicon glyphicon-cog"></span></a>
             <span class="glyphicon glyphicon-align-justify"></span>
         </div>
-        <div ng-include="model.widgetUrl(widget)"</div>
+
         <div ng-switch="widget.widgetType">
-            <div ng-switch-when="HEADING">
-                <div ng-include="'views/widget/templates/widget-heading.view.client.html'"></div>
-            </div>
-            <div ng-switch-when="IMAGE">
-                <div ng-include="'views/widget/templates/widget-img.view.client.html'"></div>
-            </div>
             <div ng-switch-when="HTML"
                  ng-bind-html="model.trust(widget.text)">
             </div>
-            <div ng-switch-when="YOUTUBE">
-                <div class="wd-youtube-dynamic">
-                    <iframe src="{{model.getYoutubeEmbedUrl(widget.url)}}"
-                            frameborder="0"
-                            allowfullscreen></iframe>
-                </div>
+            <div ng-switch-default>
+                <div ng-include="model.widgetUrl(widget)"</div>
             </div>
         </div>
     </div>
