--- a/public/assignment/views/page/templates/page-list.view.client.html
+++ b/public/assignment/views/page/templates/page-list.view.client.html
@@ -1,14 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
-    <title>Page List</title>
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet"/>
-    <link href="../../../css/style.css" rel="stylesheet"/>
-</head>
-<body>
-
 <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
         <div class="navbar-header">
@@ -36,44 +25,12 @@
                 <div class="col-md-3 visible-lg visible-md">Accessed</div>
             </div>
         </li>
-        <li class="list-group-item">
+        <li ng-repeat="page in model.pages" class="list-group-item">
             <div class="row">
-                <div class="col-md-5 col-sm-8 col-xs-10"><a href="../../widget/templates/widget-list.view.client.html">Home</a></div>
-                <div class="col-sm-3 hidden-xs">1/1/2017</div>
-                <div class="col-md-3 visible-lg visible-md">2/2/2017</div>
+                <div class="col-md-5 col-sm-8 col-xs-10"><a href="#!/user/{{model.userId}}/website/{{model.websiteId}}/page/{{page._id}}/widget">{{page.name}}</a></div>
+                <div class="col-sm-3 hidden-xs">{{page.created | date}}</div>
+                <div class="col-md-3 visible-lg visible-md">{{page.accessed | date}}</div>
                 <div class="col-sm-1 col-xs-2"><a href="page-edit.view.client.html"><span class="glyphicon glyphicon-cog pull-right"></span></a></div>
-            </div>
-        </li>
-        <li class="list-group-item">
-            <div class="row">
-                <div class="col-md-5 col-sm-8 col-xs-10"><a href="../../widget/templates/widget-list.view.client.html">Profile</a></div>
-                <div class="col-sm-3 hidden-xs">2/2/2017</div>
-                <div class="col-md-3 visible-lg visible-md">3/3/2017</div>
-                <div class="col-sm-1 col-xs-2 "><a href="page-edit.view.client.html"><span class="glyphicon glyphicon-cog pull-right"></span></a></div>
-            </div>
-        </li>
-        <li class="list-group-item">
-            <div class="row">
-                <div class="col-md-5 col-sm-8 col-xs-10"><a href="../../widget/templates/widget-list.view.client.html">Settings</a></div>
-                <div class="col-sm-3 hidden-xs">3/3/2017</div>
-                <div class="col-md-3 visible-lg visible-md">4/4/2017</div>
-                <div class="col-sm-1 col-xs-2 "><a href="page-edit.view.client.html"><span class="glyphicon glyphicon-cog pull-right"></span></a></div>
-            </div>
-        </li>
-        <li class="list-group-item">
-            <div class="row">
-                <div class="col-md-5 col-sm-8 col-xs-10"><a href="../../widget/templates/widget-list.view.client.html">Error</a></div>
-                <div class="col-sm-3 hidden-xs">4/4/2017</div>
-                <div class="col-md-3 visible-lg visible-md">5/5/2017</div>
-                <div class="col-sm-1 col-xs-2 "><a href="page-edit.view.client.html"><span class="glyphicon glyphicon-cog pull-right"></span></a></div>
-            </div>
-        </li>
-        <li class="list-group-item">
-            <div class="row">
-                <div class="col-md-5 col-sm-8 col-xs-10"><a href="../../widget/templates/widget-list.view.client.html">Random</a></div>
-                <div class="col-sm-3 hidden-xs">5/20/2017</div>
-                <div class="col-md-3 visible-lg visible-md">5/20/2017</div>
-                <div class="col-sm-1 col-xs-2 "><a href="page-edit.view.client.html"><span class="glyphicon glyphicon-cog pull-right"></span></a></div>
             </div>
         </li>
     </ul>
@@ -88,6 +45,3 @@
         </p>
     </div>
 </nav>
-
-</body>
-</html>
