--- a/public/assignment/views/website/templates/website-list.view.client.html
+++ b/public/assignment/views/website/templates/website-list.view.client.html
@@ -27,7 +27,7 @@
     </li>
     <li ng-repeat="website in model.websites" class="list-group-item">
         <div class="row">
-            <div class="col-md-5 col-sm-8 col-xs-10"><a href="../../page/templates/page-list.view.client.html">{{website.name}}</a></div>
+            <div class="col-md-5 col-sm-8 col-xs-10"><a href="#!/user/{{model.userId}}/website/{{website._id}}/page">{{website.name}}</a></div>
             <div class="col-sm-3 visible-sm visible-md visible-lg">{{website.created | date}}</div>
             <div class="col-md-3 visible-lg visible-md">{{website.accessed | date}}</div>
             <div class="col-sm-1 col-xs-2 "><a href="#!/user/{{model.userId}}/website/{{website._id}}"><span class="glyphicon glyphicon-cog pull-right"></span></a></div>
