--- a/public/assignment/views/page/templates/page-list.view.client.html
+++ b/public/assignment/views/page/templates/page-list.view.client.html
@@ -21,14 +21,14 @@
         <li class="list-group-item active">
             <div class="row">
                 <div class="col-md-5 col-sm-8 col-xs-10">Name</div>
-                <div class="col-sm-3 hidden-xs">Created</div>
+                <div class="col-sm-3 visible-lg visible-md visible-sm">Created</div>
                 <div class="col-md-3 visible-lg visible-md">Accessed</div>
             </div>
         </li>
         <li ng-repeat="page in model.pages" class="list-group-item">
             <div class="row">
                 <div class="col-md-5 col-sm-8 col-xs-10"><a href="#!/user/{{model.userId}}/website/{{model.websiteId}}/page/{{page._id}}/widget">{{page.name}}</a></div>
-                <div class="col-sm-3 hidden-xs">{{page.created | date}}</div>
+                <div class="col-sm-3 visible-lg visible-md visible-sm">{{page.created | date}}</div>
                 <div class="col-md-3 visible-lg visible-md">{{page.accessed | date}}</div>
                 <div class="col-sm-1 col-xs-2"><a href="page-edit.view.client.html"><span class="glyphicon glyphicon-cog pull-right"></span></a></div>
             </div>
