--- a/public/assignment/views/website/templates/website-new.view.client.html
+++ b/public/assignment/views/website/templates/website-new.view.client.html
@@ -30,7 +30,7 @@
 
 <div class="container-fluid">
     <div class="row">
-        <div class="col-md-4 hidden-sm hidden-xs">
+        <div class="col-md-4 visible-lg visible-md">
             <div class="container-fluid">
                 <ul class="list-group">
                     <li class="list-group-item active">
