--- a/public/assignment/views/page/templates/page-list.view.client.html
+++ b/public/assignment/views/page/templates/page-list.view.client.html
@@ -8,7 +8,7 @@
                 Pages
             </a>
             <p class="navbar-text pull-right">
-                <a href="page-new.view.client.html" class="navbar-link">
+                <a href="#!/user/{{model.userId}}/website/{{model.websiteId}}/page/new" class="navbar-link">
                     <span class="glyphicon glyphicon-plus"></span>
                 </a>
             </p>
@@ -27,10 +27,17 @@
         </li>
         <li ng-repeat="page in model.pages" class="list-group-item">
             <div class="row">
-                <div class="col-md-5 col-sm-8 col-xs-10"><a href="#!/user/{{model.userId}}/website/{{model.websiteId}}/page/{{page._id}}/widget">{{page.name}}</a></div>
+                <div class="col-md-5 col-sm-8 col-xs-10">
+                    <a href="#!/user/{{model.userId}}/website/{{model.websiteId}}/page/{{page._id}}/widget">
+                        {{page.name}}
+                    </a></div>
                 <div class="col-sm-3 visible-lg visible-md visible-sm">{{page.created | date}}</div>
                 <div class="col-md-3 visible-lg visible-md">{{page.accessed | date}}</div>
-                <div class="col-sm-1 col-xs-2"><a href="page-edit.view.client.html"><span class="glyphicon glyphicon-cog pull-right"></span></a></div>
+                <div class="col-sm-1 col-xs-2">
+                    <a href="#!/user/{{model.userId}}/website/{{model.websiteId}}/page/{{page._id}}">
+                        <span class="glyphicon glyphicon-cog pull-right"></span>
+                    </a>
+                </div>
             </div>
         </li>
     </ul>
