--- a/public/assignment/views/home/templates/home.html
+++ b/public/assignment/views/home/templates/home.html
@@ -12,11 +12,11 @@
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
                 <li class="active"><a href="#!/">Home</a></li>
-                <li><a href="#!/admin">Admin</a></li>
+                <li><a ng-show="model.currentUser.roles.indexOf('ADMIN')>-1" href="#!/admin">Admin</a></li>
                 <li ng-show="!model.currentUser._id"><a href="#!/login">Login</a></li>
                 <li ng-show="!model.currentUser._id"><a href="#!/register">Register</a></li>
                 <li ng-show="model.currentUser._id"><a href="#!/profile">Profile</a></li>
-                <li><a href="">Logout</a></li>
+                <li ng-show="model.currentUser._id"><a ng-click="model.logout()">Logout</a></li>
             </ul>
         </div><!--/.nav-collapse -->
     </div>
