--- a/public/assignment/views/user/templates/login.view.client.html
+++ b/public/assignment/views/user/templates/login.view.client.html
@@ -20,6 +20,10 @@
        class="btn btn-primary btn-block">
         Login
     </a>
+    <a href="/auth/facebook" class="btn btn-danger btn-block">
+        <span class="fa fa-facebook"></span>
+        Facebook
+    </a>
     <a class="btn btn-success btn-block"
        href="#!/register">Register</a>
 </div>
